--- a/bower.json
+++ b/bower.json
@@ -6,13 +6,14 @@
     "bootstrap-sass-official": "^3.2.0",
     "angular-animate": "^1.3.0",
     "angular-cookies": "^1.3.0",
-    "angular-ui-router": "^0.2.14"
+    "angular-ui-router": "^0.2.14",
+    "ngstorage": "^0.3.9"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
   },
   "appPath": "app",
-  "moduleName": "webappApp",
+  "moduleName": "webApp",
   "overrides": {
     "bootstrap": {
       "main": [
